--- a/Museum/Museum.csproj
+++ b/Museum/Museum.csproj
@@ -21,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.41" />
   </ItemGroup>
 
 </Project>
